apps/own-website/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: own-app
  name: own-app
  namespace: website
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: own-app
status:
  loadBalancer: {}
