apps/own-website/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  namespace: website
spec:
  rules:
    - host: portfolio.inarm.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: own-app
                port:
                  number: 8080
